<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_novo_usuario"
    tools:context="libelulati.tripctrl.NovoUsuarioActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textAutoComplete"
        android:hint="@string/nome"
        android:ems="10"
        android:id="@+id/ed_nu_nome"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/ed_nu_dtnasc"
        android:layout_below="@+id/ed_nu_nome"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ed_nu_nome"
        android:layout_alignEnd="@+id/ed_nu_nome"
        android:hint="@string/dtnasc" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress|textAutoComplete"
        android:ems="10"
        android:id="@+id/ed_nu_email"
        android:layout_below="@+id/ed_nu_dtnasc"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ed_nu_dtnasc"
        android:layout_alignEnd="@+id/ed_nu_dtnasc"
        android:hint="@string/email" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone|textAutoComplete"
        android:ems="10"
        android:id="@+id/ed_nu_telefone"
        android:layout_below="@+id/ed_nu_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ed_nu_email"
        android:layout_alignEnd="@+id/ed_nu_email"
        android:hint="@string/telefone" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textAutoComplete"
        android:ems="10"
        android:id="@+id/ed_nu_localizacao"
        android:layout_below="@+id/ed_nu_telefone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ed_nu_telefone"
        android:layout_alignEnd="@+id/ed_nu_telefone"
        android:hint="@string/localizacao" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/ed_nu_senha"
        android:layout_below="@+id/ed_nu_localizacao"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ed_nu_localizacao"
        android:layout_alignEnd="@+id/ed_nu_localizacao"
        android:hint="@string/senha" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/ed_nu_confirmesenha"
        android:layout_below="@+id/ed_nu_senha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ed_nu_senha"
        android:layout_alignEnd="@+id/ed_nu_senha"
        android:hint="@string/confirmesenha" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:id="@+id/bt_nu_salvar"
        android:layout_below="@+id/ed_nu_confirmesenha"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="64dp"
        android:layout_alignRight="@+id/ed_nu_confirmesenha"
        android:layout_alignEnd="@+id/ed_nu_confirmesenha" />

</RelativeLayout>
