<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_nova_senha"
    tools:context="libelulati.tripctrl.NovaSenhaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/informenovasenha"
        android:id="@+id/tx_ns_informe"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/ed_ns_senha"
        android:layout_below="@+id/tx_ns_informe"
        android:layout_marginTop="75dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/senha" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/ed_ns_confirmesenha"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/ed_ns_senha"
        android:layout_alignStart="@+id/ed_ns_senha"
        android:layout_alignRight="@+id/ed_ns_senha"
        android:layout_alignEnd="@+id/ed_ns_senha"
        android:hint="@string/confirmesenha" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        android:id="@+id/bt_ns_salvar"
        android:layout_below="@+id/ed_ns_confirmesenha"
        android:layout_marginTop="94dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ed_ns_confirmesenha"
        android:layout_alignEnd="@+id/ed_ns_confirmesenha" />
</RelativeLayout>
